# ghost

./: .dockerignore  .gitignore  Containerfile  Containerfile.backend  Containerfile.frontend  LICENSE  README.md  docker-compose.yaml  env.example  nginx.conf.template  podman-compose.jira.yaml  podman-compose.yaml  pyproject.toml  requirements.txt
docs/: architecture.md  configuration.md  deployment.md  development.md  getting-started.md  tools-reference.md  troubleshooting.md  web-ui.md
docs/cursor-commands/: create-management-report.md  gather-activities.md  log-activities.md  unghost.md  weekly-report.md
openshift/: configmap.yaml  deployment.yaml  kustomization.yaml  postgres.yaml  pvc.yaml  route.yaml  secrets.yaml  service.yaml
src/ghost/: __init__.py  config.py  github_client.py  jira_client.py  manager_prompts.py  prompts.py  server.py
src/ghost/api/: __init__.py  deps.py  main.py
src/ghost/db/: __init__.py  database.py  models.py
src/ghost/tools/: __init__.py  comments.py  discovery.py  manager_reports.py  reports.py  schemas.py  tickets.py
src/jira_mcp/: __init__.py  config.py  github_client.py  jira_client.py  server.py
src/jira_mcp/api/: __init__.py  deps.py  main.py
src/jira_mcp/db/: __init__.py  database.py  models.py
src/jira_mcp/tools/: __init__.py  comments.py  discovery.py  reports.py  schemas.py  tickets.py
tests/: __init__.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/api/: activities.ts  activity.ts  client.ts  fields.ts  github-tokens.ts  goals.ts  (+5 more)
(+51 files in other folders)
